# synesis-lsp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  IMPLEMENTATION_PLAN.md  INTERFACES.md  LICENSE  LSP_Implementation.md  LSP_Study  LSP_last_fixes.md  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  requirements.txt  synesis-explorer-lsp.md  synesis-lsp-performance-plan.md  synesis_load.qmd
.github/workflows/: ci.yml
Planning/: lsp_regex_elimination.md
docs/: ADR-002.md  STUDY-LSP-ADEQUACY.md
synesis_lsp/: __init__.py  __main__.py  abstract_viewer.py  blocks.py  cache.py  code_actions.py  completion.py  converters.py  definition.py  explorer_requests.py  graph.py  hover.py  inlay_hints.py  ontology_annotations.py  ontology_topics.py  references.py  rename.py  semantic_tokens.py  server.py  signature_help.py  symbols.py  template_diagnostics.py  template_info.py  workspace_diagnostics.py
tests/: __init__.py  test_abstract_viewer.py  test_cache.py  test_code_actions.py  test_completion.py  test_converters.py  test_definition.py  test_explorer_requests.py  test_graph.py  test_hover.py  test_inlay_hints.py  test_ontology_annotations.py  test_ontology_topics.py  test_references.py  test_rename.py  test_semantic_tokens.py  test_server_commands.py  test_server_diagnostics.py  test_server_smoke.py  test_signature_help.py  test_symbols.py  test_template_diagnostics.py  test_workspace_diagnostics.py
tests/examples/bibliometrics/: TEMPLATE_README.md  bibliometrics.bib  bibliometrics.syn  bibliometrics.syno  bibliometrics.synp  bibliometrics.synt
tests/examples/davi_pesquisa/: Davi.bib  Davi.syno  Davi.synp  Davi.synt  Davi.xls  leite_2025.syn_old  (+1 more)
vscode-extension/: .vscodeignore  CHANGELOG.md  INSTALL.md  README.md  README_INSTALACAO.md  TESTE_DEBUG.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  language-configuration.json  package-lock.json  package.json  python-synesis-wrapper.sh  test_lsp.sh
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: synesis.tmLanguage.json
(+62 files in other folders)
